--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,12 +1,8 @@
+myst-parser
+nbsphinx
+sphinx_gallery
+sphinx-panels
+pydata-sphinx-theme
+sphinx-copybutton
+sphinx-rtd-size
 ipykernel
-numpy
-matplotlib
-pandas
-sphinxcontrib-bibtex>=2.1
-sphinxcontrib-svg2pdfconverter
-ipywidgets
-jupytext
-sphinx-last-updated-by-git
-sphinx-codeautolink
-# docutils is an automatic dependency of Sphinx. This is only necessary until docutils > 0.19.0 is released:
--e svn+https://svn.code.sf.net/p/docutils/code/trunk/docutils@9126#egg=docutils
