--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
-[build-system]
-requires = ["setuptools >= 40.8.0"]
-build-backend = "setuptools.build_meta"
+[project]
+name = "CRC-hub"
+authors = [{name = "Zhixin Li", email = "zhixin_li@dfci.harvard.edu"}]
+dynamic = ["version", "description"]
