--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,12 +1,13 @@
 ipykernel
-numpy
-matplotlib
-pandas
-sphinxcontrib-bibtex>=2.1
-sphinxcontrib-svg2pdfconverter
+# numpy
+# matplotlib
+# pandas
+# sphinxcontrib-bibtex>=2.1
+# sphinxcontrib-svg2pdfconverter
 ipywidgets
 jupytext
 sphinx-last-updated-by-git
 sphinx-codeautolink
 # docutils is an automatic dependency of Sphinx. This is only necessary until docutils > 0.19.0 is released:
--e svn+https://svn.code.sf.net/p/docutils/code/trunk/docutils@9126#egg=docutils
+# -e svn+https://svn.code.sf.net/p/docutils/code/trunk/docutils@9126#egg=docutils
+pydata-sphinx-theme
