--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -2,8 +2,8 @@ ipykernel
 # numpy
 # matplotlib
 # pandas
-# sphinxcontrib-bibtex>=2.1
-# sphinxcontrib-svg2pdfconverter
+sphinxcontrib-bibtex>=2.1
+sphinxcontrib-svg2pdfconverter
 ipywidgets
 jupytext
 sphinx-last-updated-by-git
