--- a/doc/NotUsed/requirements.txt
+++ b/doc/NotUsed/requirements.txt
@@ -11,3 +11,6 @@ sphinx-codeautolink
 # docutils is an automatic dependency of Sphinx. This is only necessary until docutils > 0.19.0 is released:
 # -e svn+https://svn.code.sf.net/p/docutils/code/trunk/docutils@9126#egg=docutils
 pydata-sphinx-theme
+sphinx-copybutton
+sphinx-rtd-size
+sphinx-panels
